fix: center-align header title

--- a/resources/js/components/Header/style.scss
+++ b/resources/js/components/Header/style.scss
@@ -37,6 +37,7 @@ $photapp_logo: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAATQAAABXCAYAAA
         }
 
         h1.bg-logo {
+            width: 145px;
             margin-top: 0 !important;
             background: $photapp_logo;
             background-size: 110px;
